@@ -40,6 +40,9 @@ static bool Level::IsStageAvailable(int LevelStage, int StageType);
 "558bec83ec1c53568b750c578bf9897df88b879c810100":
 bool Level::place_room(LevelGenerator_Room* slot, RoomConfig* data, uint32_t seed, uint32_t unk);
 
+"558bec515356578b3d????????8bd9":
+__thiscall bool Level::IsNextStageAvailable();
+
 struct Level {
 	uint32_t _levelStateFlag : 0x1822c;
 } : 0x18230;
